# egui_pick_file

./: Cargo.toml  README.md  Trunk.toml  browse.js  browse_bg.wasm  index.html  sw.js
.github/workflows/: pages.yml  rust.yml
src/: app.rs  lib.rs  main.rs
